[package]
name = "ws"
version = "0.1.0"
authors = ["test1"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
warp = "0.2"
log = "0.4"
pretty_env_logger = "0.3"
futures = { version = "0.3", default-features = false }
